--- a/app/index.html
+++ b/app/index.html
@@ -65,7 +65,7 @@
       <!--</section>-->
     <!--</div>-->
 
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation" ng-controller="NavCtrl">
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation" ng-controller="NavCtrl as nav">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -82,12 +82,12 @@
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul-->
-          <ul class="nav navbar-nav navbar-right" ng-hide="loggedIn">
+          <ul class="nav navbar-nav navbar-right" ng-hide="nav.loggedIn">
             <li><a href="#/login">Login</a></li>
             <li><a href="#/signup">Signup</a></li> <!-- class="active" -->
           </ul>
-          <ul class="nav navbar-nav navbar-right" ng-show="loggedIn">
-            <li><a href="" ng-click="logout()">Logout</a></li>
+          <ul class="nav navbar-nav navbar-right" ng-show="nav.loggedIn">
+            <li><a href="" ng-click="nav.logout()">Logout</a></li>
           </ul>
 
         </div><!--/.nav-collapse -->
@@ -138,7 +138,7 @@
     <script src="scripts/services/userservice.js"></script>
     <script src="scripts/controllers/login.js"></script>
     <script src="scripts/controllers/todos.js"></script>
-    <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/controllers/nav.js"></script>
     <!-- endbuild -->
 </body>
 </html>
