--- a/app/index.html
+++ b/app/index.html
@@ -128,6 +128,7 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/parse/parse.min.js"></script>
+    <script src="bower_components/angular-promise-tracker/promise-tracker.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
